# number-conversion

./: README.md  pyproject.toml
number_conversion/: __init__.py  main.py  test.py
src/: test1.py
src/number_conversion/: __init__.py  core.py  digits.py  main.py  prefix_map.py
