[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "number-conversion"
version = "0.0.1"
authors = [
  { name="pschlo", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"

[tool.hatch.build]
include = [
  "**/*.py",
  "py.typed"
]
