[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "number-conversion"
version = "1.0.1"
authors = [
  { name="pschlo", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"


[tool.hatch.build.targets.sdist]
# choose what to include in sdist
# the wheel will only include src/number_conversion anyway
# include = [ ]
