[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "number-conversion"
version = "2.0.0"
authors = [
  { name="pschlo", email="author@example.com" },
]
description = "Converts between different numeral systems"
readme = "README.md"
requires-python = ">=3.7"


[tool.hatch.build.targets.sdist]
# choose here what to include in sdist
# the wheel will only include src/number_conversion anyway
# see https://discuss.python.org/t/should-sdists-include-docs-and-tests/14578
# include = [ ]
